# phOS

./: .gitignore  CMakeLists.txt  Makefile  README  bochs.cfg  boot.sh  link.ld
arch/: boot.s  monitor.s  tables.s
arch/x86/: InitSetup.cpp  hw_tables.c
arch/x86/asm/: boot.nasm  isr.nasm  isr.s  monitor.nasm  monitor.s  tables.nasm
doc/: links.txt
include/phos/: InitSetup.hpp  Kernel.hpp  Video.hpp  hw_tables.h  kernel.h  monitor.h  multiboot.h  stdio.h
kernel/: CPPRTSupport.c  Kernel.cpp  Video.cpp  hw_tables.c  main.c  monitor.c
